# code

./: OPTIC.ipynb  acasxu.ipynb  acasxu_dubins.ipynb  acasxu_f16.ipynb  gcas.ipynb  gmm_clustering ACASXU.ipynb  gmm_clustering.ipynb  greedy_permutation.ipynb  main.ipynb  pyproject.toml  regression_training.ipynb  univariate.ipynb
.github/: copilot-instructions.md
aerobench/examples/anim3d/: run_all.sh
aerobench/lowlevel/: cm.py
aerobench/visualize/: plot.py
aerobench_ACASXU/: run_f16_sim.py
aerobench_ACASXU/examples/acasxu/: acasxu_autopilot.py  run_acasxu_decision_plots.py  run_acasxu_state_plots.py
aerobench_ACASXU/examples/anim3d/: run_GCAS_anim3d.py  run_combined_anim3d.py  run_u_turn_anim3d.py
aerobench_ACASXU/examples/gcas/: gcas_autopilot.py  run_GCAS.py  run_GCAS_inverted.py
aerobench_ACASXU/examples/straight_and_level/: run.py
aerobench_ACASXU/examples/waypoint/: run_u_turn.py  (+2 more)
aerobench_ACASXU/highlevel/: autopilot.py  controlled_f16.py
aerobench_ACASXU/lowlevel/: cl.py  cm.py  cn.py  cx.py  cz.py  dampp.py  dlda.py  dldr.py  dnda.py  dndr.py  low_level_controller.py  pdot.py  subf16_model.py  thrust.py
aerobench_ACASXU/visualize/: anim.py  anim3d.py  plot.py
aerobench_GCAS/: run_f16_sim.py
aerobench_GCAS/highlevel/: autopilot.py  controlled_f16.py
aerobench_GCAS/lowlevel/: cl.py  cm.py  cn.py  cx.py  cz.py  dampp.py  dlda.py  dldr.py  dnda.py  dndr.py  low_level_controller.py  pdot.py  subf16_model.py  thrust.py
aerobench_GCAS/visualize/: anim.py  anim3d.py  plot.py
type_definitions/: test_case.py  test_result.py  utils.py
(+16 files in other folders)
