[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cma>=4.4.1",
    "fastdtw>=0.3.4",
    "gpytorch>=1.14.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "similaritymeasures>=1.3.0",
    "torch>=2.9.0",
]
